--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store »
 .DS_Store
+MyPlayground_0711.playground/playground.xcworkspace/xcuserdata/kimsang-gyu.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
+MyPlayground_0711.playground/playground.xcworkspace/xcuserdata/kimsang-gyu.xcuserdatad/UserInterfaceState.xcuserstate
